syntax = "proto3";
option go_package = "/vaultservpb";

package vaultservpb;

service Vault {
  rpc StoreCred (StoreCredRequest) returns (StoreCredResponse) {}
}

message StoreCredRequest {
  string credname = 1;
  string username = 2;
  string password = 3;
}

message StoreCredResponse {
  string status = 1;
}
